// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`postgresql HTTP Transport #1 Orders.totalAmount: #1 Orders.totalAmount 1`] = `
Array [
  Object {
    "Orders.totalAmount": "1700",
  },
]
`;

exports[`postgresql HTTP Transport #2 Events.count: #2 Events.count 1`] = `
Array [
  Object {
    "Events.count": "999",
  },
]
`;

exports[`postgresql HTTP Transport #3 Events.count with Events.type order by Events.type DESC, Events.count: #3 Events.count with Events.type order by Events.type DESC, Events.count 1`] = `
Array [
  Object {
    "Events.count": "92",
    "Events.type": "WatchEvent",
  },
  Object {
    "Events.count": "2",
    "Events.type": "ReleaseEvent",
  },
  Object {
    "Events.count": "513",
    "Events.type": "PushEvent",
  },
  Object {
    "Events.count": "21",
    "Events.type": "PullRequestReviewCommentEvent",
  },
  Object {
    "Events.count": "32",
    "Events.type": "PullRequestEvent",
  },
  Object {
    "Events.count": "1",
    "Events.type": "MemberEvent",
  },
  Object {
    "Events.count": "57",
    "Events.type": "IssuesEvent",
  },
  Object {
    "Events.count": "104",
    "Events.type": "IssueCommentEvent",
  },
  Object {
    "Events.count": "21",
    "Events.type": "GollumEvent",
  },
  Object {
    "Events.count": "21",
    "Events.type": "ForkEvent",
  },
  Object {
    "Events.count": "14",
    "Events.type": "DeleteEvent",
  },
  Object {
    "Events.count": "120",
    "Events.type": "CreateEvent",
  },
  Object {
    "Events.count": "1",
    "Events.type": "CommitCommentEvent",
  },
]
`;

exports[`postgresql HTTP Transport Dbt orders count: Dbt orders count 1`] = `
Array [
  Object {
    "OrdersFiltered.ordersCount": "999",
  },
]
`;

exports[`postgresql HTTP Transport Different column data types: Different column data types 1`] = `
Array [
  Object {
    "unusualDataTypes.array": Array [
      1,
      2,
      3,
    ],
    "unusualDataTypes.bit_column": "11111111",
    "unusualDataTypes.boolean_column": true,
    "unusualDataTypes.cidr_column": "192.168.0.0/24",
    "unusualDataTypes.id": 1,
    "unusualDataTypes.inet_column": "192.168.0.1",
    "unusualDataTypes.json": Object {
      "key": "value1",
      "number": 42,
    },
    "unusualDataTypes.jsonb": Object {
      "key": "value1",
      "number": 42,
    },
    "unusualDataTypes.mac_address": "11:22:33:44:55:66",
    "unusualDataTypes.point_column": Object {
      "x": 1,
      "y": 1,
    },
    "unusualDataTypes.status": "new",
    "unusualDataTypes.text_column": "Hello, world!",
    "unusualDataTypes.xml_column": "<root><child>data</child></root>",
  },
  Object {
    "unusualDataTypes.array": Array [
      4,
      5,
      6,
    ],
    "unusualDataTypes.bit_column": "00000001",
    "unusualDataTypes.boolean_column": false,
    "unusualDataTypes.cidr_column": "192.168.0.0/24",
    "unusualDataTypes.id": 2,
    "unusualDataTypes.inet_column": "192.168.0.2",
    "unusualDataTypes.json": Object {
      "key": "value2",
      "number": 84,
    },
    "unusualDataTypes.jsonb": Object {
      "key": "value2",
      "number": 84,
    },
    "unusualDataTypes.mac_address": "00:11:22:33:44:55",
    "unusualDataTypes.point_column": Object {
      "x": 2,
      "y": 2,
    },
    "unusualDataTypes.status": "new",
    "unusualDataTypes.text_column": "Goodbye, world!",
    "unusualDataTypes.xml_column": "<root><child>more data</child></root>",
  },
  Object {
    "unusualDataTypes.array": Array [
      7,
      8,
      9,
    ],
    "unusualDataTypes.bit_column": "11110000",
    "unusualDataTypes.boolean_column": true,
    "unusualDataTypes.cidr_column": "192.168.0.0/24",
    "unusualDataTypes.id": 3,
    "unusualDataTypes.inet_column": "192.168.0.3",
    "unusualDataTypes.json": Object {
      "key": "value3",
      "number": 168,
    },
    "unusualDataTypes.jsonb": Object {
      "key": "value3",
      "number": 168,
    },
    "unusualDataTypes.mac_address": "22:33:44:55:66:77",
    "unusualDataTypes.point_column": Object {
      "x": 3,
      "y": 3,
    },
    "unusualDataTypes.status": "processed",
    "unusualDataTypes.text_column": "PostgreSQL is awesome!",
    "unusualDataTypes.xml_column": "<root><child>even more data</child></root>",
  },
]
`;

exports[`postgresql WS Transport #1 Orders.totalAmount: #1 Orders.totalAmount 1`] = `
Array [
  Object {
    "Orders.totalAmount": "1700",
  },
]
`;

exports[`postgresql WS Transport #2 Events.count: #2 Events.count 1`] = `
Array [
  Object {
    "Events.count": "999",
  },
]
`;

exports[`postgresql WS Transport #3 Events.count with Events.type order by Events.type DESC, Events.count: #3 Events.count with Events.type order by Events.type DESC, Events.count 1`] = `
Array [
  Object {
    "Events.count": "92",
    "Events.type": "WatchEvent",
  },
  Object {
    "Events.count": "2",
    "Events.type": "ReleaseEvent",
  },
  Object {
    "Events.count": "513",
    "Events.type": "PushEvent",
  },
  Object {
    "Events.count": "21",
    "Events.type": "PullRequestReviewCommentEvent",
  },
  Object {
    "Events.count": "32",
    "Events.type": "PullRequestEvent",
  },
  Object {
    "Events.count": "1",
    "Events.type": "MemberEvent",
  },
  Object {
    "Events.count": "57",
    "Events.type": "IssuesEvent",
  },
  Object {
    "Events.count": "104",
    "Events.type": "IssueCommentEvent",
  },
  Object {
    "Events.count": "21",
    "Events.type": "GollumEvent",
  },
  Object {
    "Events.count": "21",
    "Events.type": "ForkEvent",
  },
  Object {
    "Events.count": "14",
    "Events.type": "DeleteEvent",
  },
  Object {
    "Events.count": "120",
    "Events.type": "CreateEvent",
  },
  Object {
    "Events.count": "1",
    "Events.type": "CommitCommentEvent",
  },
]
`;

exports[`postgresql filters contains #1 Orders.status.contains: ["e"]: #1 Orders.status.contains: ["e"] 1`] = `
Array [
  Object {
    "Orders.count": "5",
  },
]
`;

exports[`postgresql filters contains #2 Orders.status.contains: ["es"]: #2 Orders.status.contains: ["es"] 1`] = `
Array [
  Object {
    "Orders.count": "2",
  },
]
`;

exports[`postgresql filters contains #3 Orders.status.contains: ["a"]: #3 Orders.status.contains: ["a"] 1`] = `
Array [
  Object {
    "Orders.count": "0",
  },
]
`;

exports[`postgresql filters contains #3 Orders.status.contains: ["es", "w"]: #3 Orders.status.contains: ["es", "w"] 1`] = `
Array [
  Object {
    "Orders.count": "4",
  },
]
`;

exports[`postgresql filters endsWith #1 Orders.status.endsWith: ["a"]: #1 Orders.status.endsWith: ["a"] 1`] = `
Array [
  Object {
    "Orders.count": "0",
  },
]
`;

exports[`postgresql filters endsWith #2 Orders.status.endsWith: ["w"]: #2 Orders.status.endsWith: ["w"] 1`] = `
Array [
  Object {
    "Orders.count": "2",
  },
]
`;

exports[`postgresql filters endsWith #3 Orders.status.endsWith: ["sed"]: #3 Orders.status.endsWith: ["sed"] 1`] = `
Array [
  Object {
    "Orders.count": "2",
  },
]
`;

exports[`postgresql filters endsWith #4 Orders.status.endsWith: ["ped"]: #4 Orders.status.endsWith: ["ped"] 1`] = `
Array [
  Object {
    "Orders.count": "1",
  },
]
`;

exports[`postgresql filters endsWith #4 Orders.status.endsWith: ["w", "sed", "ped"]: #4 Orders.status.endsWith: ["w", "sed", "ped"] 1`] = `
Array [
  Object {
    "Orders.count": "5",
  },
]
`;

exports[`postgresql filters startsWith #1 Orders.status.startsWith: ["a"]: #1 Orders.status.startsWith: ["a"] 1`] = `
Array [
  Object {
    "Orders.count": "0",
  },
]
`;

exports[`postgresql filters startsWith #2 Orders.status.startsWith: ["n"]: #2 Orders.status.startsWith: ["n"] 1`] = `
Array [
  Object {
    "Orders.count": "2",
  },
]
`;

exports[`postgresql filters startsWith #3 Orders.status.startsWith: ["p"]: #3 Orders.status.startsWith: ["p"] 1`] = `
Array [
  Object {
    "Orders.count": "2",
  },
]
`;

exports[`postgresql filters startsWith #4 Orders.status.startsWith: ["sh"]: #4 Orders.status.startsWith: ["sh"] 1`] = `
Array [
  Object {
    "Orders.count": "1",
  },
]
`;

exports[`postgresql filters startsWith #5 Orders.status.startsWith: ["n", "p", "s"]: #5 Orders.status.startsWith: ["n", "p", "s"] 1`] = `
Array [
  Object {
    "Orders.count": "5",
  },
]
`;

exports[`postgresql responseFormat http+responseFormat=compact option#1+2: result-type 1`] = `
Array [
  Object {
    "Orders.status": "processed",
    "Orders.totalAmount": "800",
  },
  Object {
    "Orders.status": "shipped",
    "Orders.totalAmount": "600",
  },
]
`;

exports[`postgresql responseFormat http+responseFormat=compact option#1: result-type 1`] = `
Array [
  Object {
    "Orders.status": "processed",
    "Orders.totalAmount": "800",
  },
  Object {
    "Orders.status": "shipped",
    "Orders.totalAmount": "600",
  },
]
`;

exports[`postgresql responseFormat http+responseFormat=compact option#2: result-type 1`] = `
Array [
  Object {
    "Orders.status": "processed",
    "Orders.totalAmount": "800",
  },
  Object {
    "Orders.status": "shipped",
    "Orders.totalAmount": "600",
  },
]
`;

exports[`postgresql responseFormat http+responseFormat=default: result-type 1`] = `
Array [
  Object {
    "Orders.status": "processed",
    "Orders.totalAmount": "800",
  },
  Object {
    "Orders.status": "shipped",
    "Orders.totalAmount": "600",
  },
]
`;

exports[`postgresql responseFormat ws+responseFormat=compact option#1+2: result-type 1`] = `
Array [
  Object {
    "Orders.status": "processed",
    "Orders.totalAmount": "800",
  },
  Object {
    "Orders.status": "shipped",
    "Orders.totalAmount": "600",
  },
]
`;

exports[`postgresql responseFormat ws+responseFormat=compact option#1: result-type 1`] = `
Array [
  Object {
    "Orders.status": "processed",
    "Orders.totalAmount": "800",
  },
  Object {
    "Orders.status": "shipped",
    "Orders.totalAmount": "600",
  },
]
`;

exports[`postgresql responseFormat ws+responseFormat=compact option#2: result-type 1`] = `
Array [
  Object {
    "Orders.status": "processed",
    "Orders.totalAmount": "800",
  },
  Object {
    "Orders.status": "shipped",
    "Orders.totalAmount": "600",
  },
]
`;

exports[`postgresql responseFormat ws+responseFormat=default: result-type 1`] = `
Array [
  Object {
    "Orders.status": "processed",
    "Orders.totalAmount": "800",
  },
  Object {
    "Orders.status": "shipped",
    "Orders.totalAmount": "600",
  },
]
`;
